# porcupine

./: .gitmodules  Cargo.toml  LICENSE  README.md
old/: old-main.rs
src/: audio_shell.rs  gui.rs  keyboard_utils.rs  main.rs  synth.rs
src/synth/: mod.rs  part.rs  seq.rs  util.rs
src/ui/: text.rs
