[package]
name = "Porcupine"
version = "0.1.0"
edition = "2021"

[dependencies]
clearscreen = "3.0.0"
lazy_static = "1.5.0"
linked_hash_set = "0.1.4"
memoize = "0.4.2"
mi-plaits-dsp = { git = "https://github.com/xerydian/mi-plaits-dsp-rs" }
num = "0.4.3"
rdev = { git = "https://github.com/xerydian/rdev" }
spin_sleep = "1.2.1"
tinyaudio = "0.2.0"
winapi = { version = "0.3.9", features = [ "winuser", "winnt" ] } 
